<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.mapbox.mapboxsdk.maps.MapView>
    </FrameLayout>

    <LinearLayout
        android:background="#fff"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="17sp"
            android:textColor="#111"
            android:textStyle="bold"
            android:id="@+id/status_mode_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Fetching Location "/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/user_count_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/user_count"
                    android:gravity="center"
                    android:paddingEnd="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_person_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/cons_count_holder"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:paddingEnd="3dp"
                android:paddingLeft="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cons_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_construction_marker"
                    android:gravity="center"
                    android:paddingEnd="4dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/traffic_count_holder"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:paddingEnd="3dp"
                android:paddingLeft="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/road_count"
                    android:gravity="center"
                    android:paddingEnd="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_road_crash"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/road_count_holder"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:paddingEnd="3dp"
                android:paddingLeft="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/traffic_count"
                    android:gravity="center"
                    android:paddingEnd="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_traffic_jam"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/iamhere"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_above="@+id/select_type_holder"
        android:layout_height="wrap_content">

    </LinearLayout>
    <LinearLayout
        android:id="@+id/remove_route"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_above="@+id/iamhere"
        android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_type_holder"
        android:weightSum="3"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:text=" I am here "
                android:paddingEnd="5dp"
                android:textColor="#fff"
                android:textSize="10sp"
                android:drawableStart="@drawable/ic_person_pin_circle_black_24dp"
                android:paddingStart="10dp"
                android:background="@drawable/selectmap_layout"
                android:id="@+id/my_loc2"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@drawable/view_newsfeed_btn"
                android:layout_width="70dp"
                android:gravity="center"
                android:layout_height="70dp">
                <Button
                    android:textColor="#fff"
                    android:background="@drawable/checknewsfeed"
                    android:textSize="10sp"
                    android:id="@+id/view_newsfeed_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

            </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:text=" Style "
                android:textSize="10sp"
                android:textColor="#fff"
                android:drawableStart="@drawable/ic_palette_black_24dp"
                android:paddingStart="10dp"
                android:background="@drawable/selectmap_layout"
                android:id="@+id/my_loc"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/route_info"
        android:layout_alignParentBottom="true"
        android:background="@drawable/route_info_container"
        android:layout_width="match_parent"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="15sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="#111"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Here is your route, "/>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:drawableStart="@drawable/ic_my_location_black_24dp"
                    android:textSize="10sp"
                    android:textColor="#111"
                    android:layout_width="wrap_content"
                    android:text=" "
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/dest_ad"
                    android:textSize="12sp"
                    android:textColor="#111"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Destination_Address"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="10sp"
                    android:textColor="#111"
                    android:drawableStart="@drawable/route_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/dest_dis"
                    android:textSize="12sp"
                    android:textColor="#111"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Destination_Address"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="10sp"
                    android:drawableStart="@drawable/route_info_time"
                    android:textColor="#111"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/dest_dur"
                    android:textSize="12sp"
                    android:textColor="#111"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Destination_Address"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/start_route"
                    android:textSize="10sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/cancel_route_btn"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="Start"/>
                <Button
                    android:text=" Cancel Route "
                    android:textSize="10sp"
                    android:textColor="#fff"
                    android:background="@drawable/cancel_route_btn"
                    android:layout_marginTop="5dp"
                    android:id="@+id/remove_route_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>